# CPPonwayGameOfLife

./: CMakeLists.txt  README.md
src/: main.cpp
src/game/: a.out  game.cpp  game.h
src/gui/: boardgui.cpp  boardgui.h
